Fix bug where menu button was not aligned to the right of the screen on iphones

--- a/scss/layout/_nav-bar.scss
+++ b/scss/layout/_nav-bar.scss
@@ -39,7 +39,7 @@
         &__menu {
             place-self: flex-end;
             align-self: center;
-            width: fit-content;
+            width: u.em(40);
             display: block !important;
         }
     }
